Adds travis scripts and handlers helper

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,13 @@ go:
   - 1.7.x
   - 1.8.x
   - master
+
+install:
+  - go get -t ./...
+  - go get code.google.com/p/go.tools/cmd/cover
+  - go get github.com/mattn/goveralls
+
+script:
+  - PATH="$HOME/gopath/bin:$PATH"
+  - go test ./...
+  - script/coverage --coveralls
